change random and assertEquals for collections